# winter

./: .gitignore  Cargo.toml  README.md
hooks/: Cargo.toml
hooks/src/: hooks.rs  lib.rs  state.rs
hooks/src/hooks/: common.rs  input.rs  library.rs  misc.rs  time.rs  window.rs
hooks_macros/: Cargo.toml
hooks_macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: communication.rs  event.rs  handle.rs  input.rs  ipc.rs  lib.rs  pipe.rs  process.rs  system.rs  thread.rs  windows.rs
shared/src/ipc/: message.rs
shared/src/windows/: event.rs  handle.rs  module.rs  pipe.rs  process.rs  thread.rs
windows/: Cargo.toml
windows/src/: lib.rs  pipe.rs  process.rs  thread.rs
winter/: Cargo.toml  build.rs
winter/src/: lib.rs  main.rs  saved_state.rs
winter/tests/: conductor.rs  hooks.rs  input_hooks.rs  misc.rs  misc_hooks.rs  programs.rs  runtime.rs  saved_state.rs  stdout.rs  time_hooks.rs  window_hooks.rs
winter/tests/programs/: build.bat
winter/tests/programs/include/: assert.h  create_window.h
winter/tests/programs/src/: GetTickCount64.c  GetTickCount64_busy_wait.c  GetTickCount_busy_wait.c  QueryPerformanceCounter_busy_wait.c  echo_command_line_string.c  get_keyboard_state.c  get_message.c  get_message_with_key_messages.c  get_system_time_as_file_time.c  get_system_time_as_file_time_and_sleep.c  get_system_time_precise_as_file_time_and_sleep.c  get_tick_count.c  get_tick_count_and_sleep.c  key_down_and_key_up.c  nt_set_information_thread.c  peek_message.c  peek_message_with_key_messages.c  query_performance_counter.c  query_performance_counter_and_sleep.c  register_class_ex.c  register_class_ex_a.c  register_class_ex_w.c  stdout.c  stdout_large.c  timeGetTime_busy_wait.c  time_get_time.c  time_get_time_and_sleep.c  waitable_timer.c
winter/tests/programs/src/hooks/input/: GetAsyncKeyState.c  GetKeyState.c
winter/tests/programs/src/hooks/misc/: GetCommandLine.c  NtSetInformationThread.c  RegisterClassEx.c  library_loading_0.c  library_loading_1.c
winter/tests/programs/src/hooks/time/: GetSystemTimePreciseAsFileTime_busy_wait.c
winter/tests/programs/src/saved_state/: allocated_memory.c  event.c  mutex.c  pipe.c  stack_memory.c
winter/tests/utilities/: Cargo.toml
winter/tests/utilities/src/: build.rs  lib.rs
winter/tests/utilities_macros/: Cargo.toml
winter/tests/utilities_macros/src/: lib.rs
