[workspace]
members = [
    "hooks",
    "hooks_macros",
    "shared",
    "winter",
    "winter/tests/utilities",
    "winter/tests/utilities_macros",
]
resolver = "2"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
keyword_idents = "warn"
let_underscore_drop = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
pedantic = "warn"
unused_trait_names = "warn"
