[package]
name = "hooks"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
minhook = "0.3.0"
static_init = "1.0.3"
windows = { path = "../windows" }
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "winbase",
    "winuser",
] }
