[package]
name = "hooks"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
minhook = "0.3.0"
shared = { path = "../shared" }
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "profileapi",
    "sysinfoapi",
    "timeapi",
    "winbase",
    "winsock2",
    "winuser",
] }
