[package]
name = "hooks"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
minhook = "0.3.0"
ntapi = "0.4.1"
shared = { path = "../shared" }
hooks_macros = { path = "../hooks_macros" }
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "profileapi",
    "sysinfoapi",
    "timeapi",
    "winbase",
    "winsock2",
    "winuser",
] }
