[package]
name = "shared"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.38"
tracing = "0.1.39"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "jobapi2",
    "memoryapi",
    "namedpipeapi",
    "synchapi",
    "tlhelp32",
    "winbase",
    "winerror",
] }
