[package]
name = "windows"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
tracing = "0.1.39"
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "psapi",
    "tlhelp32",
    "winbase",
    "wow64apiset",
] }
