[package]
name = "winter"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
thiserror = "1.0.38"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
shared = { path = "../shared" }

[dev-dependencies]
test_utilities = { path = "tests/utilities" }
